# SimpleHttpServer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml
.github/workflows/: default.yml
ci/: linux.yml  windows.yml
include/QtHttpServer/: defines.hpp  server.hpp
include/SimpleHttpServer/: defines.hpp  enums.hpp  queryinformations.hpp  server.hpp  serverresponse.hpp  types.hpp
private/: headershelper.hpp  requesthandler.hpp  responsehandler.hpp  server_p.hpp
server-src/: main.cpp
src/: headershelper.cpp  main.cpp  requesthandler.cpp  responsehandler.cpp  server.cpp
test/: main.cpp  server_tst.cpp
